Fix exclusive compression command

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="func-desc">
                     Compress exclusively
                     <div>
-                        <span class="command">tar -czvf foo.tar.gz file1 file2 --exclude *.log</span>
+                        <span class="command">tar -czvf foo.tar.gz file1 file2 --exclude=file_to_exclude</span>
                     </div>
                 </div>
             </div>
