--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                 <div>
                     <div class="func-desc">
                         Create bzip2ed archive
-                        <span class="command">tar -cjvf foo.tar.bz2</span>
+                        <span class="command">tar -cjvf foo.tar.bz2 file1 file2</span>
                     </div>
                 </div>
                 <div>
                     <div class="func-desc">
                         Create xzipped archive
-                        <span class="command">tar -cJvf foo.tar.xz</span>
+                        <span class="command">tar -cJvf foo.tar.xz file1 file2</span>
                     </div>
                 </div>
-                <div id="footer">
-                    Made with ❤️ by Max Roncace | <a href="https://github.com/caseif/targz.info">GitHub</a>
-                </div>
+            </div>
+            <div id="footer">
+                Made with ❤️ by Max Roncace | <a href="https://github.com/caseif/targz.info">GitHub</a>
             </div>
         </div>
     </body>
